--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  super_qr_reader: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
