--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   super_qr_reader: ^2.0.0
+  http: ^0.12.1
+  vibration: ^1.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
