--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   super_qr_reader: ^2.0.0
   http: ^0.12.1
   vibration: ^1.2.4
+  image_picker: ^0.6.0+9
+  permission_handler: ^5.0.0
+  sqflite: ^1.3.0+1
+  path_provider: ^1.6.8
+  path: ^1.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
